--- a/about-us.html
+++ b/about-us.html
@@ -780,8 +780,7 @@
                                                             International Relations and Diplomacy in Paris,
                                                             France, she pursued courses at Harvard University,
                                                             MIT University, the London School of Economics,
-                                                            Oxford University, and more. She has since
-                                                            participated in innumerable events, conferences,
+                                                            Oxford University, and more. She has since then, she has been participating in innumerable events, conferences,
                                                             forums, and discussion panels.</p>
                                                         <p class="p-about">Dr. Wafa has also held a wide variety of
                                                             strategically and socially prominent memberships
@@ -828,7 +827,7 @@
                                                     class="gdlr-core-text-box-item gdlr-core-item-pdlr gdlr-core-item-pdb">
                                                     <div class="gdlr-core-text-box-item-content" id="div_983a_20">
                                                         <p class="p-about2" style="font-size: 1.2rem;">Our main mission
-                                                            is to help students and
+                                                            is to help students,
                                                             give them a sense of confidence and
                                                             improve their skills by providing modern methods and
                                                             innovative approaches to
@@ -1037,14 +1036,14 @@
                                                         <div class="gdlr-core-text-box-item-content" id="div_983a_20">
                                                             <p>We are committed to providing a
                                                                 conducive learning environment
-                                                                that will evoke in our students the
+                                                                which will evoke in our students the
                                                                 Raffles Sense.
                                                             </p>
                                                             <p>From the look and feel of the campus
                                                                 to the vibrant, youthful culture, every
                                                                 face of our campus exudes a positive
-                                                                energy that translates to a positive
-                                                                attitude which we call the Raffles Sense.
+                                                                energy which translates to a positive
+                                                                attitude, which we call the Raffles Sense.
                                                                 This Raffles Sense will embrace
                                                                 and envelop each and every student.</p>
                                                         </div>
@@ -1062,8 +1061,8 @@
                                                                 the barriers that limit them.
                                                             </p>
                                                             <p>We will unleash their potential
-                                                                and unveil their hidden talent.
-                                                                Raffles nurtures the student’s
+                                                                and unveil their hidden talents.
+                                                                Raffles nurtures the students'
                                                                 abilities beyond their five senses</p>
 
                                                         </div>
@@ -1081,7 +1080,7 @@
                                                                 to strive towards self-actualization
                                                                 that will drive them to break new
                                                                 grounds, cultivate their talent and fuel
-                                                                the passion necessary for a successful
+                                                                the needed passion for a successful
                                                                 lifelong career.
                                                             </p>
                                                         </div>
@@ -1111,7 +1110,7 @@
                     <div class="subscribe-box">
                         <div class="inner wow fadeIn">
                             <h2>GET IN TOUCH WITH US NOW<br>
-                                TO SEE HOW WE CAN HELP!
+                                TELL US HOW WE CAN HELP!
                             </h2>
                             <form id="contact" name="contact" action="" method="post">
                                 <input type="email" name="email" id="email" required=""
@@ -1169,7 +1168,7 @@
                                         class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points">
                                         <li class="menu-item"><a href="#">Office No.25, Home Offices,
                                                 Turki Bin Abdulaziz st 11454
-                                                Riyadh, Saaudi Arabia</a></li>
+                                                Riyadh, Saudi Arabia</a></li>
                                     </ul>
                                 </div>
                             </div>
