--- a/fashion-management-design.html
+++ b/fashion-management-design.html
@@ -596,9 +596,10 @@
                                                 <div class="gdlr-core-text-box-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align"
                                                     style="padding-bottom: 0px ;">
                                                     <div class="gdlr-core-text-box-item-content prg-width p-color">
-                                                        <p>Is an exciting field that opens one up to countless
+                                                        <p>Fashion Marketing
+                                                            & Management Design is an exciting field that opens one up to countless
                                                             opportunities in the fashion industry.
-                                                            Students learn buying and merchandising practices,
+                                                            Students learn buying and merchandising practices, along with
                                                             conceptualizing and developing
                                                             effective brand management strategies to execute advertising
                                                             and promotional activities.
@@ -655,7 +656,7 @@
                                                         • Buying Principles<br>
                                                         • Consumer Behavior<br>
                                                         • Academic Research &<br>
-                                                    &nbsp;&nbsp;Communication Skill
+                                                    &nbsp;&nbsp;Communication Skills
                                                       
                                                     </p>
                                                 </div>
@@ -673,7 +674,7 @@
                                                         • Color Theory<br>
                                                         • Technical Drawings<br>
                                                         • Garmin Typology<br>
-                                                        • Computer Graphics Skills<br>
+                                                        • Computer Graphic Skills<br>
                                                         • Digital Photography<br>
                                                         • Visual Merchandising<br>
                                                         • Marketing & Merchandising<br>
@@ -720,8 +721,8 @@
                                                     <h3
                                                         class="gdlr-core-title-item-title gdlr-core-skin-title h3mob h3-css-splitter mrg-top">
                                                         Career opportunities available after completing<br>
-                                                        the completing the Fashion Marketing &<br>
-                                                        Management Design diploma
+                                                        the Fashion Marketing &<br>
+                                                        Management Design Advanced Diploma
                                                     </h3>
                                                 </div>
                                             </div>
@@ -859,7 +860,7 @@
                                         class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points">
                                         <li class="menu-item"><a href="#">Office No.25, Home Offices,
                                                 Turki Bin Abdulaziz st 11454
-                                                Riyadh, Saaudi Arabia</a></li>
+                                                Riyadh, Saudi Arabia</a></li>
                                     </ul>
                                 </div>
                             </div>
