--- a/programs.html
+++ b/programs.html
@@ -732,7 +732,7 @@
                                     class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points">
                                     <li class="menu-item"><a href="#">Office No.25, Home Offices,
                                             Turki Bin Abdulaziz st 11454
-                                            Riyadh, Saaudi Arabia</a></li>
+                                            Riyadh, Saudi Arabia</a></li>
                                 </ul>
                             </div>
                         </div>
