--- a/services.html
+++ b/services.html
@@ -753,7 +753,7 @@
                                                         Focused specialized design fields of study, as it offers many
                                                         fields such as ( Interior Design - Jewelry Design - Fashion
                                                         Design - Visual Communication - Fashion Marketing &
-                                                        Management Design), to study what you want.
+                                                        Management Design). So, you will be able to study what you desire.
 
                                                     </p>
                                                 </div>
@@ -888,7 +888,7 @@
                                         class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points">
                                         <li class="menu-item"><a href="#">Office No.25, Home Offices,
                                                 Turki Bin Abdulaziz st 11454
-                                                Riyadh, Saaudi Arabia</a></li>
+                                                Riyadh, Saudi Arabia</a></li>
                                     </ul>
                                 </div>
                             </div>
