--- a/visual-communication.html
+++ b/visual-communication.html
@@ -596,7 +596,7 @@
                                                     <div
                                                         class="gdlr-core-text-box-item-content prg-width p-color mrg-lft">
                                                         <p>It is the field that combines design and technology, and it
-                                                            is the tool that is used to
+                                                            is the tool which is used to
                                                             carry creative ideas from the product to the target audience
                                                             in a visual language.
                                                             This program offers the study of basic theories and
@@ -739,7 +739,7 @@
                                                             <h3
                                                                 class="gdlr-core-title-item-title gdlr-core-skin-title h3mob h3-css">
                                                                 Career opportunities available after completing<br>
-                                                                the Visual Communication diploma
+                                                                the Visual Communication Advanced Diploma
                                                             </h3>
                                                         </div>
                                                     </div>
@@ -850,7 +850,7 @@
                                                 class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points">
                                                 <li class="menu-item"><a href="#">Office No.25, Home Offices,
                                                         Turki Bin Abdulaziz st 11454
-                                                        Riyadh, Saaudi Arabia</a></li>
+                                                        Riyadh, Saudi Arabia</a></li>
                                             </ul>
                                         </div>
                                     </div>
