--- a/fashion-design.html
+++ b/fashion-design.html
@@ -604,9 +604,9 @@
                                                             designs, defining fashion and trends in designs, and
                                                             choosing colors, fabrics, prints, and
                                                             motifs. It also includes managing the design process from
-                                                            the concept involvedin the design
+                                                            the concept involved in the design
                                                             to the production and release of the garments to the public,
-                                                            and the useof 2D and
+                                                            along with the use of 2D and
                                                             3D computer design programs.
                                                         </p>
                                                     </div>
@@ -725,7 +725,7 @@
                                                     <h3
                                                         class="gdlr-core-title-item-title gdlr-core-skin-title h3mob h3-css">
                                                         Career opportunities available after completing<br>
-                                                        the Fashion Design diploma
+                                                        the Fashion Design Advanced Diploma
                                                     </h3>
                                                 </div>
                                             </div>
@@ -843,7 +843,7 @@
                                         class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points">
                                         <li class="menu-item"><a href="#">Office No.25, Home Offices,
                                                 Turki Bin Abdulaziz st 11454
-                                                Riyadh, Saaudi Arabia</a></li>
+                                                Riyadh, Saudi Arabia</a></li>
                                     </ul>
                                 </div>
                             </div>
