--- a/foundation-studies.html
+++ b/foundation-studies.html
@@ -667,7 +667,7 @@
                                                         and sketching skills. The module is intended for
                                                         a beginner who has little or no drawing and
                                                         sketching skills. Students will gain a working
-                                                        knowledge of form, space, shape,light, texture,
+                                                        knowledge of form, space, shape, light, texture,
                                                         line, proportion, perspective,volume and
                                                         composition.
                                                     </p>
@@ -791,7 +791,7 @@
                                         class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points">
                                         <li class="menu-item"><a href="#">Office No.25, Home Offices,
                                                 Turki Bin Abdulaziz st 11454
-                                                Riyadh, Saaudi Arabia</a></li>
+                                                Riyadh, Saudi Arabia</a></li>
                                     </ul>
                                 </div>
                             </div>
