--- a/interior-design.html
+++ b/interior-design.html
@@ -595,15 +595,15 @@
                                                     style="padding-bottom: 0px ;">
                                                     <div
                                                         class="gdlr-core-text-box-item-content prg-width p-color mrg-lft">
-                                                        <p>Interior design is the art and science that enhance buildings
+                                                        <p>Interior design is the art and science of enhance buildings
                                                             from the inside,
-                                                            and increase their aesthetics.the study of interior design
+                                                            and increase their aesthetics. The study of interior design
                                                             includes the design
                                                             and planning of spaces and interior spaces, creative problem
                                                             solving, knowledge
                                                             of building materials and design history. It also plays the
                                                             main and essential role
-                                                            in maintaining the integrity of the building.The interior
+                                                            in maintaining the integrity of the building. The interior
                                                             design aspects consist
                                                             of both technical aspects and planning aspects. This is in
                                                             addition to the technical
@@ -688,7 +688,8 @@
                                                         • Interior Design Principles & Theory<br>
                                                         • Interior Materials & Finishes <br>
                                                         • Computer Graphic Skills <br>
-                                                        • Restaurant & Hospitality
+                                                        • Restaurant & Hospitality <br>
+                                                        • Ret
                                                     </p>
                                                 </div>
                                             </div>
@@ -707,7 +708,7 @@
                                                         & Documentation<br>
                                                         • Practice Construction Studies Academic
                                                         Research <br>
-                                                        • Architectural Drafting Professional <br>
+                                                        • Professional Architectural Drafting <br>
                                                         • Creativity & Concept Development <br>
                                                         • Cultural studies
                                                     </p>
@@ -727,7 +728,7 @@
                                                     <h3
                                                         class="gdlr-core-title-item-title gdlr-core-skin-title h3mob h3-css">
                                                         Career opportunities available after<br>
-                                                        completing the Interior Design diploma
+                                                        completing the Interior Design Advanced Diploma
                                                     </h3>
                                                 </div>
                                             </div>
@@ -741,7 +742,7 @@
                                         </div>
                                         <div class="grid-item">
                                             <img src="img/Bullets-01.png" alt="Icon 2">
-                                            <p>Manager Design</p>
+                                            <p>Manager Designer</p>
                                         </div>
                                         <div class="grid-item">
                                             <img src="img/Bullets-01.png" alt="Icon 3">
@@ -773,7 +774,7 @@
                                         </div>
                                         <div class="grid-item">
                                             <img src="img/Bullets-01.png" alt="Icon 6">
-                                            <p>Lighting Designer Facility</p>
+                                            <p>Lighting Facility Designer</p>
                                         </div>
                                     </div>
 
@@ -855,7 +856,7 @@
                                         class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points">
                                         <li class="menu-item"><a href="#">Office No.25, Home Offices,
                                                 Turki Bin Abdulaziz st 11454
-                                                Riyadh, Saaudi Arabia</a></li>
+                                                Riyadh, Saudi Arabia</a></li>
                                     </ul>
                                 </div>
                             </div>
