--- a/jewelery-design.html
+++ b/jewelery-design.html
@@ -600,7 +600,7 @@
                                                             of various types of metals,
                                                             then converting them from raw materials into unique pieces
                                                             with attractive designs.
-                                                            This art is learned through curricula that rely on
+                                                            This art is learned through a curriculum which relies on
                                                             imagination, innovation, originality,
                                                             and technical and professional skills. It is a wide-ranging
                                                             curriculum that contains
@@ -647,7 +647,7 @@
                                                         • Major Jewelry Design Project<br>
                                                         • Industrial Attachment<br>
                                                         • Observational Drawing<br>
-                                                        • Enameling and Glass<br>
+                                                        • Enameling<br>
                                                         • Model Making
                                                     </p>
                                                 </div>
@@ -726,7 +726,7 @@
                                                     <h3
                                                         class="gdlr-core-title-item-title gdlr-core-skin-title h3mob h3-css">
                                                         Career opportunities available after completing<br>
-                                                        the Jewelry Design diploma
+                                                        the Jewelry Design Advanced Diploma
                                                     </h3>
                                                 </div>
                                             </div>
@@ -855,7 +855,7 @@
                                         class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points">
                                         <li class="menu-item"><a href="#">Office No.25, Home Offices,
                                                 Turki Bin Abdulaziz st 11454
-                                                Riyadh, Saaudi Arabia</a></li>
+                                                Riyadh, Saudi Arabia</a></li>
                                     </ul>
                                 </div>
                             </div>
