--- a/scholarships.html
+++ b/scholarships.html
@@ -572,23 +572,23 @@
                                 <p class="p-about" style="font-size: 1.2rem;">Raffles Design Institute is proud to offer
                                     scholarships to international and domestic students, rewarding
                                     interested, qualified and talented applicants on merit.<br>
-                                    Please note that competition for scholarships is usually intense, in order to be
+                                    Please note that competition for scholarships is usually intense. In order to be
                                     able to maintain your
-                                    scholarship your overall grade must remain at a A.<br>
+                                    scholarship, your overall grade must remain of an average A.<br>
                                     We do not tolerate frequent absences, and students must attend all classes.</p>
                                 <br>
                                 <h5 class="" style="margin-bottom: 25px;">Scholarships Requirements:</h5>
                                 <p class="p-about">
-                                    - Total (from %95 to %99) overall final grade
+                                    - Overall final grade (from %95 to %99) 
                                 </p>
                                 <p class="p-about">
-                                    -  Maintain an average of A
+                                    -  Maintaining grade within the average of A
                                 </p>
                                 <p class="p-about">
-                                    - Pass the English language test
+                                    - Passing the English language test
                                 </p>
                                 <p class="p-about">
-                                    - Pass the interview in person
+                                    - Passing the interview in person
                                 </p>
                             </div>
                         </div>
@@ -670,7 +670,7 @@
                                     class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain bullet-points">
                                     <li class="menu-item"><a href="#">Office No.25, Home Offices,
                                             Turki Bin Abdulaziz st 11454
-                                            Riyadh, Saaudi Arabia</a></li>
+                                            Riyadh, Saudi Arabia</a></li>
                                 </ul>
                             </div>
                         </div>
